# airflow-study

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dags/: dbt_learning_cosmos.py  hello_airflow.py
tests/: conftest.py  test_hello_airflow.py
